Higher chance for SEO

--- a/index.html
+++ b/index.html
@@ -3,18 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dott.ssa Marika Poricelli - Psicologa e Psicoterapeuta</title>
-    <meta name="description" content="Psicologa e psicoterapeuta specializzata in terapie familiari e di coppia. Percorsi personalizzati con ascolto, empatia e strumenti scientifici validati." />
-    <meta name="author" content="Dott.ssa Marika Poricelli" />
+    
+    <!-- Primary Meta Tags -->
+    <title>Dott.ssa Marika Porricelli | Psicologa e Psicoterapeuta</title>
+    <meta name="title" content="Dott.ssa Marika Porricelli | Psicologa e Psicoterapeuta">
+    <meta name="description" content="Studio di psicologia e psicoterapia della Dott.ssa Marika Porricelli. Terapia individuale, di coppia e familiare per il benessere psicologico.">
+    <meta name="keywords" content="Marika Porricelli, psicologa, psicoterapeuta, terapia, psicologia, benessere, ansia, depressione, coppia, famiglia">
+    <meta name="author" content="Dott.ssa Marika Porricelli">
 
-    <meta property="og:title" content="Dott.ssa Marika Poricelli - Psicologa e Psicoterapeuta" />
-    <meta property="og:description" content="Psicologa e psicoterapeuta specializzata in terapie familiari e di coppia. Percorsi personalizzati con ascolto, empatia e strumenti scientifici validati." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://wbs-collab.github.io/marikaporricelli_psy/">
+    <meta property="og:title" content="Dott.ssa Marika Porricelli | Psicologa e Psicoterapeuta">
+    <meta property="og:description" content="Studio di psicologia e psicoterapia della Dott.ssa Marika Porricelli. Terapia individuale, di coppia e familiare per il benessere psicologico.">
+    <meta property="og:image" content="https://wbs-collab.github.io/marikaporricelli_psy/src/assets/38e8d6ed-6ba0-4317-b0fd-2b912f115df9.png">
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://wbs-collab.github.io/marikaporricelli_psy/">
+    <meta property="twitter:title" content="Dott.ssa Marika Porricelli | Psicologa e Psicoterapeuta">
+    <meta property="twitter:description" content="Studio di psicologia e psicoterapia della Dott.ssa Marika Porricelli. Terapia individuale, di coppia e familiare per il benessere psicologico.">
+    <meta property="twitter:image" content="https://wbs-collab.github.io/marikaporricelli_psy/src/assets/38e8d6ed-6ba0-4317-b0fd-2b912f115df9.png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
