Implemented custom domain

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://wbs-collab.github.io/marikaporricelli_psy/">
+    <meta property="og:url" content="https://www.marikaporricellipsicologa.it">
     <meta property="og:title" content="Dott.ssa Marika Porricelli | Psicologa e Psicoterapeuta">
     <meta property="og:description" content="Studio di psicologia e psicoterapia della Dott.ssa Marika Porricelli. Terapia individuale, di coppia e familiare per il benessere psicologico.">
-    <meta property="og:image" content="https://wbs-collab.github.io/marikaporricelli_psy/src/assets/38e8d6ed-6ba0-4317-b0fd-2b912f115df9.png">
+    <meta property="og:image" content="https://www.marikaporricellipsicologa.it/src/assets/38e8d6ed-6ba0-4317-b0fd-2b912f115df9.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://wbs-collab.github.io/marikaporricelli_psy/">
+    <meta property="twitter:url" content="https://www.marikaporricellipsicologa.it">
     <meta property="twitter:title" content="Dott.ssa Marika Porricelli | Psicologa e Psicoterapeuta">
     <meta property="twitter:description" content="Studio di psicologia e psicoterapia della Dott.ssa Marika Porricelli. Terapia individuale, di coppia e familiare per il benessere psicologico.">
-    <meta property="twitter:image" content="https://wbs-collab.github.io/marikaporricelli_psy/src/assets/38e8d6ed-6ba0-4317-b0fd-2b912f115df9.png">
+    <meta property="twitter:image" content="https://www.marikaporricellipsicologa.it/src/assets/38e8d6ed-6ba0-4317-b0fd-2b912f115df9.png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
